# NegPy

./: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
crosstalk/: README.md  fujifilm_200.toml  fujifilm_400.toml  fujifilm_c200.toml  fujifilm_natura_1600.toml  fujifilm_pro_400h.toml  fujifilm_superia_xtra_400.toml  harman_phoenix_ii.toml  kodak_ektar_100.toml  kodak_gold_example.toml  kodak_portra_160.toml  kodak_portra_800.toml  kodak_ultramax_400.toml  vision3_500t.toml
docs/: CAMERA_SCANNING.md  CHANGELOG.md  CONTACT_SHEET_TEMPLATES.md  CROSSTALK.md  USER_GUIDE.md
negpy/desktop/: controller.py  converters.py  main.py  prefetch_logic.py  session.py
negpy/desktop/view/: keyboard_shortcuts.py  main_window.py  shortcut_registry.py
negpy/domain/: interfaces.py  models.py  types.py
tests/: conftest.py  test_auto_exposure_contrast.py  test_auto_shadow_neutral.py  test_canvas_polyline_finish.py  test_canvas_zoom_limits.py  test_capture_calibration.py  test_capture_gphoto.py  test_capture_presets.py  test_capture_service.py  test_capture_white.py  test_capture_worker.py  test_chart_curve_parity.py  test_config_deserialization.py  test_config_hash_caching.py  test_contact_sheet_templates.py  test_controller.py  test_crossover_surround.py  test_crosstalk_profiles.py  test_database_management.py  test_desktop_session.py  test_drange_margin.py  test_export_color_management.py  test_export_overwrite.py  test_export_presets.py  test_export_service.py  test_export_settings_form.py  test_exposure_logic.py  test_exposure_pivot.py  test_finish_logic.py  test_finish_processor.py  test_geometry_logic.py  test_gpu_engine.py  test_grade_calibration.py  test_image_processor.py  test_ir_dust.py  test_lab_colorspace.py  test_lab_logic.py  test_lock_bounds.py  test_negative_stats.py  test_normalization_unclamped.py  (+24 more)
tests/metadata/: test_gear_payload.py
tests/metrics/: test_preview_load.py
tests/scanners/: test_capabilities.py
(+98 files in other folders)
